feat(backend): Improved GlobalExceptionHandler for better exception handling and clearer messages